# home-mangler

./: Cargo.toml  LICENSE.txt  README.md  flake.nix  garnix.yaml
.config/: nextest.toml
nix/: makeLib.nix  makePackages.nix  packagesFromDirectory.nix
nix/lib/: makeConfiguration.nix  makePackages.nix  makeScript.nix
src/: cli.rs  command_ext.rs  config.rs  diff_trees.rs  directories.rs  files.rs  flake.rs  format_bulleted_list.rs  main.rs  packages.rs  symlink.rs  tracing.rs
src/nix/: build.rs  flake_metadata.rs  flake_update.rs  mod.rs  profile_list.rs
test-data/: configuration.nix  flake.nix
tests/: packages.rs
tests/harness/: mod.rs
