[package]
name = "home-mangler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5.0", features = ["mmap"] }
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.4.7", features = ["derive", "wrap_help", "env"] }
directories = "5.0.1"
gethostname = "0.4.3"
itertools = "0.11.0"
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
path-absolutize = "3.1.1"
same-file = "1.0.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
shell-words = "1.1.0"
tap = "1.0.1"
toml = "0.8.6"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-human-layer = "0.1.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.4.0"
